Jenkinsfile 修改stash的文件目录
Signed-off-by: wuqingjian <wuqingjiancpp@qq.com>